Version 5.17 - 1 June 2009, Thierry Vignaud

- consider chrooted /etc/product.id when detecting whether installed
  distro is stable or cooker
- do not restart if we didn't install any package (when having
  priority packages)
- fix not displaying importance and reasons of updates (#51118)
  (regression introduced by #50276 fix in 5.16.2)
- make 'urpmi-root' implying rpm-root so that the proper chrooted db
  got opened
- rpmdrake:
  o update GUI package list

Version 5.16.4 - 13 May 2009, Thierry Vignaud

- rpmdrake:
  o do not crash when running as root (#50473)

Version 5.16.3 - 6 May 2009, Thierry Vignaud

- rpmdrake:
  o save "Compute updates on startup" setting
  o when searching in descriptions, do not search among packages not
    in current view (#50638)

Version 5.16.2 - 30 April 2009, Thierry Vignaud

- rpmdrake:
  o fix listing _one_ non installed package as installed (#50276)
  o fix swedish translation that broke menu structure (#49989)
  o default "Compute updates on startup" to yes
    (fix "MandrivaUpdate and urpmi show updated rpm, while rpmdrake
    doesn't", #47305)
  o manually list cedega, picasa, VariCAD, VariCAD_View &
    VMware-Player as GUI packages (#50379)
  o update GUI package list

Version 5.16.1 - 15 April 2009, Thierry Vignaud

- ignore /etc/fstab for *.rpmnew (#49887)
- rpmdrake:
  o update GUI package list

Version 5.16 - 3 April 2009, Thierry Vignaud

- revert using installer hack that prevents having gray wait message dialogs on
  dialog popup in favor of old rgs hack, else (when not on displayed desktop),
  it uses too much CPU and waits until it got the focus (#48912)
- rpmdrake:
  o update GUI package list

Version 5.15 - 1 April 2009, Thierry Vignaud

- kill --no-splash option (useless since 4.17 (do not display a splash
  text anymore)), thus fixing #49035)
- rpmdrake:
  o add a sensible tooltip for the "find" entry (#39454)
  o suggest to switch to the 'all' view if there's no search results (#38461)
