@@ -1,3 +1,6 @@
+- rpmdrake
+  o added dependencies section in package details panel
+
 Version 5.17 - 1 June 2009, Thierry Vignaud
 
 - consider chrooted /etc/product.id when detecting whether installed
